exports[`ListOrder React component Renders correctly with decimal marker 1`] = `
<ol
  className="ol">
  <li
    className="li copy markerDecimal">
    List Item 1
  </li>
  <li
    className="li copy markerDecimal">
    List Item 2
  </li>
  <li
    className="li copy markerDecimal">
    List Item 3
  </li>
</ol>
`;

exports[`ListOrder React component Renders correctly with default props 1`] = `
<ol
  className="ol">
  <li
    className="li copy">
    List Item 1
  </li>
  <li
    className="li copy">
    List Item 2
  </li>
  <li
    className="li copy">
    List Item 3
  </li>
</ol>
`;

exports[`ListOrder React component Renders correctly with disc marker 1`] = `
<ol
  className="ol">
  <li
    className="li copy markerDisc">
    List Item 1
  </li>
  <li
    className="li copy markerDisc">
    List Item 2
  </li>
  <li
    className="li copy markerDisc">
    List Item 3
  </li>
</ol>
`;

exports[`ListOrder React component Renders correctly with text-copy prop 1`] = `
<ol
  className="ol">
  <li
    className="li copy">
    List Item 1
  </li>
  <li
    className="li copy">
    List Item 2
  </li>
  <li
    className="li copy">
    List Item 3
  </li>
</ol>
`;

exports[`ListOrder React component Renders correctly without text-copy prop 1`] = `
<ol
  className="ol">
  <li
    className="li">
    List Item 1
  </li>
  <li
    className="li">
    List Item 2
  </li>
  <li
    className="li">
    List Item 3
  </li>
</ol>
`;
